--- a/game/public/index.html
+++ b/game/public/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html style="margin: 0; height: 100%;">
     <head>
         <meta charset="UTF-8">
         <title>Squadrons of Abandonement</title>
-        <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+        <style type="text/css">
+            .loadingSpinner {
+              width: 50px;
+              height: 50px;
+              border-radius: 50%;
+              border: 6px solid #111111;
+              border-right-color: white;
+              animation: l2 1.2s infinite linear;
+            }
+            @keyframes l2 {to{transform: rotate(1turn)}}
+        </style>
     </head>
-    <body>
-        
+    <body style="margin: 0; height: 100%; background-color: black;">
+        <div id="loadingScreenDiv" style="margin: 0; padding: 0; position: absolute; width: 100%; top: calc(50% - 10px); color: white; text-align: center;">
+            LOADING
+            <div class="loadingSpinner" style="margin: 0; padding: 0; position: absolute; left: calc(50% - 32px); top: calc(50% - 100px);"></div>
+            <img src="assets/img/squadronsOfAbandonementLogo.png" style="margin: 0; padding: 0; position: absolute; width: 200px; height: 200px; left: calc(50% - 100px); top: calc(50% - 320px);"></div>
+        </div>
     </body>
 </html>
