--- a/game/public/index.html
+++ b/game/public/index.html
@@ -14,6 +14,18 @@
               animation: l2 1.2s infinite linear;
             }
             @keyframes l2 {to{transform: rotate(1turn)}}
+            
+            #fps {
+                position: absolute;
+                background-color: black;
+                text-align: center;
+                font-size: 10px;
+                color: white;
+                top: 0px;
+                left: 0px;
+                width: 35px;
+                height: 15px;
+            }
         </style>
     </head>
     <body style="margin: 0; height: 100%; background-color: black;">
@@ -22,5 +34,6 @@
             <div class="loadingSpinner" style="margin: 0; padding: 0; position: absolute; left: calc(50% - 32px); top: calc(50% - 100px);"></div>
             <img src="assets/img/squadronsOfAbandonementLogo.png" style="margin: 0; padding: 0; position: absolute; width: 200px; height: 200px; left: calc(50% - 100px); top: calc(50% - 320px);"></div>
         </div>
+        <div id="fps">NaN fps</div>
     </body>
 </html>
